@@ -34,47 +34,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <scala.version>2.10.4</scala.version>
-        <PermGen>64m</PermGen>
-        <MaxPermGen>512m</MaxPermGen>
-        <CodeCacheSize>512m</CodeCacheSize>
-        <test.java.home>${java.home}</test.java.home>
-        <test.exclude.tags></test.exclude.tags>
-        <scala.binary.version>2.10</scala.binary.version>
-        <java.version>1.7</java.version>
-        <!--
-     Overridable test home. So that you can call individual pom files directly without
-     things breaking.
-   -->
-        <libsml.test.home>test</libsml.test.home>
-
     </properties>
-
-    <dependencies>
-        <!--
-             This is needed by the scalatest plugin, and so is declared here to be available in
-             all child modules, just as scalatest is run in all children
-        -->
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.novocode</groupId>
-            <artifactId>junit-interface</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
 
     <dependencyManagement>
         <dependencies>
@@ -202,7 +165,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-core_${scala.binary.version}</artifactId>
+                <artifactId>spark-core_2.10</artifactId>
                 <version>1.3.1</version>
                 <exclusions>
                     <exclusion>
@@ -218,7 +181,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+                <artifactId>spark-mllib_2.10</artifactId>
                 <version>1.3.1</version>
                 <exclusions>
                     <exclusion>
@@ -239,148 +202,14 @@
                 <artifactId>commons-math3</artifactId>
                 <version>3.2</version>
             </dependency>
-
-            <dependency>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_${scala.binary.version}</artifactId>
-                <version>2.2.1</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.novocode</groupId>
-                <artifactId>junit-interface</artifactId>
-                <version>0.11</version>
-                <scope>test</scope>
-            </dependency>
-
         </dependencies>
 
     </dependencyManagement>
 
 
+
     <build>
-
-        <plugins>
-            <!-- This plugin dumps the test classpath into a file -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.10</version>
-                <executions>
-                    <execution>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>build-classpath</goal>
-                        </goals>
-                        <configuration>
-                            <includeScope>test</includeScope>
-                            <outputProperty>test_classpath</outputProperty>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-            </plugin>
-            <!-- Enable surefire and scalatest in all children, in one place: -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.scalastyle</groupId>
-                <artifactId>scalastyle-maven-plugin</artifactId>
-                <version>0.7.0</version>
-                <configuration>
-                    <verbose>false</verbose>
-                    <failOnViolation>true</failOnViolation>
-                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
-                    <failOnWarning>false</failOnWarning>
-                    <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
-                    <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-                    <configLocation>scalastyle-config.xml</configLocation>
-                    <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
-                    <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
-                    <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>create-tmp-dir</id>
-                        <phase>generate-test-resources</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <mkdir dir="${project.build.directory}/tmp" />
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest-maven-plugin</artifactId>
-            </plugin>
-
-            <!-- Build test-jar's for all projects, since some projects depend on tests from others -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>prepare-test-jar</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>log4j.properties</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-
         <pluginManagement>
-
             <plugins>
                 <plugin>
                     <groupId>org.apache.avro</groupId>
@@ -391,75 +220,41 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.2.2</version>
+                    <version>3.2.0</version>
                     <executions>
-                        <execution>
-                            <id>eclipse-add-source</id>
-                            <goals>
-                                <goal>add-source</goal>
-                            </goals>
-                        </execution>
                         <execution>
                             <id>scala-compile-first</id>
                             <phase>process-resources</phase>
                             <goals>
+                                <goal>add-source</goal>
                                 <goal>compile</goal>
                             </goals>
                         </execution>
                         <execution>
-                            <id>scala-test-compile-first</id>
+                            <id>scala-test-compile</id>
                             <phase>process-test-resources</phase>
                             <goals>
                                 <goal>testCompile</goal>
                             </goals>
                         </execution>
-                        <execution>
-                            <id>attach-scaladocs</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>doc-jar</goal>
-                            </goals>
-                        </execution>
                     </executions>
-                    <configuration>
-                        <scalaVersion>${scala.version}</scalaVersion>
-                        <recompileMode>incremental</recompileMode>
-                        <useZincServer>true</useZincServer>
-                        <args>
-                            <arg>-unchecked</arg>
-                            <arg>-deprecation</arg>
-                            <arg>-feature</arg>
-                        </args>
-                        <jvmArgs>
-                            <jvmArg>-Xms1024m</jvmArg>
-                            <jvmArg>-Xmx1024m</jvmArg>
-                            <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
-                            <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
-                            <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
-                        </jvmArgs>
-                        <javacArgs>
-                            <javacArg>-source</javacArg>
-                            <javacArg>${java.version}</javacArg>
-                            <javacArg>-target</javacArg>
-                            <javacArg>${java.version}</javacArg>
-                            <javacArg>-Xlint:all,-serial,-path</javacArg>
-                        </javacArgs>
-                    </configuration>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
+                    <version>3.2</version>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <encoding>UTF-8</encoding>
-                        <maxmem>1024m</maxmem>
-                        <fork>true</fork>
-                        <compilerArgs>
-                            <arg>-Xlint:all,-serial,-path</arg>
-                        </compilerArgs>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
 
@@ -468,83 +263,7 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.18.1</version>
-                    <!-- Note config is repeated in scalatest config -->
-                    <configuration>
-                        <includes>
-                            <include>**/Test*.java</include>
-                            <include>**/*Test.java</include>
-                            <include>**/*TestCase.java</include>
-                            <include>**/*Suite.java</include>
-                        </includes>
-                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                        <argLine>-Xmx3g -Xss4096k -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=512m</argLine>
-                        <environmentVariables>
-                            <!--
-                              Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
-                              launched by the tests have access to the correct test-time classpath.
-                            -->
-                            <SPARK_DIST_CLASSPATH>test_classpath</SPARK_DIST_CLASSPATH>
-                            <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
-                            <SPARK_TESTING>1</SPARK_TESTING>
-                            <JAVA_HOME>${test.java.home}</JAVA_HOME>
-                        </environmentVariables>
-                        <systemProperties>
-                            <derby.system.durability>test</derby.system.durability>
-                            <java.awt.headless>true</java.awt.headless>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                        </systemProperties>
-                        <failIfNoTests>false</failIfNoTests>
-                        <excludedGroups>${test.exclude.tags}</excludedGroups>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.scalatest</groupId>
-                    <artifactId>scalatest-maven-plugin</artifactId>
-                    <version>1.0</version>
-                    <!-- Note config is repeated in surefire config -->
-                    <configuration>
-                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                        <junitxml>.</junitxml>
-                        <filereports>LibsmlTestSuite.txt</filereports>
-                        <argLine>-ea -Xmx3g -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=${CodeCacheSize}
-                        </argLine>
-                        <stderr/>
-                        <environmentVariables>
-                            <!--
-                              Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
-                              launched by the tests have access to the correct test-time classpath.
-                            -->
-                            <!--<SPARK_DIST_CLASSPATH>test_classpath</SPARK_DIST_CLASSPATH>-->
-                            <!--<SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>-->
-                            <!--<SPARK_TESTING>1</SPARK_TESTING>-->
-                            <JAVA_HOME>${test.java.home}</JAVA_HOME>
-                        </environmentVariables>
-                        <systemProperties>
-                            <derby.system.durability>test</derby.system.durability>
-                            <java.awt.headless>true</java.awt.headless>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                        </systemProperties>
-                        <tagsToExclude>${test.exclude.tags}</tagsToExclude>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>test</id>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
             </plugins>
-
-
         </pluginManagement>
     </build>
 
